# TPS2_PR2

./: CMakeLists.txt  README.md
src/: analyzer.cpp  analyzer.h  main.cpp  thread_pool.h
test_files/: file1.txt  file2.txt  file3.txt
tests/: test_analyzer.cpp  test_framework.h  tmp_test1.txt  tmp_test_ml.txt
